feat(learn-service): implement quiz API endpoints, lesson seeding, streak & XP services